[package]
name = "speech_indexer"
version = "0.1.0"
authors = ["nikos efthias <nikos@mugsoft.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
google_translate_tts = "0.1.2"
actix-web = "2.0.0"
actix-rt = "1.1.1"
reqwest = "0.10.4"
bytes = "0.5.4"
serde = {version="1.0.110",features=["derive"]}
